k8s-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: default
spec:
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark-master
        image: spark:3.0.1
        imagePullPolicy: Never
        args: ["spark/sbin/start-all.sh"]
        ports:
        - containerPort: 7077
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: default
  labels:
    app: spark-master
spec:
  type: ClusterIP
  selector:
    app: spark-master
  ports:
  - name: web-ui
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: spark-master
    port: 7077
    targetPort: 7077
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-master
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: spark.okkpp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: spark-master
          servicePort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: default
spec:
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
      - name: spark-worker
        image: spark:3.0.1
        imagePullPolicy: Never
        args: ["spark/sbin/start-slave.sh", "spark://spark-master:7077"]
